themes/gradient/panel.less
//
// Component: Panel
//
// ========================================================================


// Variables
// ========================================================================

@panel-title-margin-bottom:                     @global-margin;
@panel-title-font-size:                         round((@global-font-size * 1.28)); // 18px / 20px
@panel-title-line-height:                       round((@panel-title-font-size * 1.32)); // 24px / 26px
@panel-title-color:                             @global-color;

@panel-box-padding:                             @global-margin;
@panel-box-background:                          #fafafa;
@panel-box-color:                               @global-color;
@panel-box-title-color:                         @global-color;
@panel-box-teaser-margin:                       -(@panel-box-padding + 1);

@panel-box-secondary-background:                #fff;

@panel-hover-padding:                           @global-margin;
@panel-hover-color:                             @global-color;
@panel-hover-hover-color:                       @global-color;
@panel-hover-hover-background:                  #fafafa;
@panel-hover-teaser-margin:                     -(@panel-hover-padding + 1);

@panel-header-title-border:                     @global-border;
@panel-header-title-color:                      @global-color;

@panel-divider-gutter:                          @global-grid-gutter;
@panel-divider-gutter-large:                    @global-grid-gutter-large;
@panel-divider-border:                          @global-border;

//
// New
//

@panel-box-border:                              @global-border;
@panel-box-primary-border:                      fade(@panel-box-primary-color, 30%);

@panel-hover-border:                            @global-border;


// Sub-object: `uk-panel-title`
// ========================================================================

.hook-panel-title() {}


// Sub-object: `uk-panel-badge`
// ========================================================================

.hook-panel-badge() {}


// Modifier: `uk-panel-box`
// ========================================================================

.hook-panel-box() {
    border: 1px solid @panel-box-border;
    border-radius: @global-border-radius;
}

.hook-panel-box-hover() {}

.hook-panel-box-primary() { border-color: @panel-box-primary-border; }

.hook-panel-box-primary-hover() {}

.hook-panel-box-secondary() {}

.hook-panel-box-secondary-hover() {}


// Modifier: `uk-panel-hover`
// ========================================================================

.hook-panel-hover() {
    border: 1px solid transparent;
    border-radius: @global-border-radius;
}

.hook-panel-hover-hover() { border-color: @panel-hover-border; }


// Modifier: `uk-panel-header`
// ========================================================================

.hook-panel-header() {}


// Miscellaneous
// ========================================================================

.hook-panel-misc() {

    .uk-panel-box .uk-panel-teaser {
		border-top-left-radius: @global-border-radius;
        border-top-right-radius: @global-border-radius;
        overflow: hidden;
    }

}

